.ci-logs/last-build-error.log
Cannot remap modifiers because it does not exists in any of the targets [] or their parents.
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/mixin/NetworkFirewallMixin.java:32: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/mixin/NetworkFirewallMixin.java:32: error: cannot find symbol
---FULL TAIL---
Fetching distribution.
Downloading https://services.gradle.org/distributions/gradle-9.6.1-bin.zip
.............10%.............20%..............30%.............40%..............50%.............60%.............70%..............80%.............90%..............100%

Welcome to Gradle 9.6.1!

Here are the highlights of this release:
 - Improved Configuration Cache hit rates
 - Additional CLI rendering options
 - Important project hierarchy lookup deprecations

For more details see https://docs.gradle.org/9.6.1/release-notes.html

Starting a Gradle Daemon (subsequent builds will be faster)

> Configure project :
Fabric Loom: 1.14.10

Cannot remap modifiers because it does not exists in any of the targets [] or their parents.

> Task :compileJava
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/mixin/NetworkFirewallMixin.java:32: error: cannot find symbol
        if (!NetworkFirewall.isChannelAllowed(channel)) {
                            ^
  symbol:   method isChannelAllowed(String)
  location: class NetworkFirewall
Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///home/runner/work/Azelux-Client/Azelux-Client/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava' (registered by plugin class 'org.gradle.api.plugins.JavaBasePlugin').
> Compilation failed; see the compiler output below.
  Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/mixin/NetworkFirewallMixin.java:32: error: cannot find symbol
          if (!NetworkFirewall.isChannelAllowed(channel)) {
                              ^
    symbol:   method isChannelAllowed(String)
    location: class NetworkFirewall
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.6.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 55s
1 actionable task: 1 executed
